# group-c-project

./: .gitignore  CMakeLists.txt  Readme.md  aes.c  aes.h  compressed.rle  help.txt  main.c  readme.txt
help/: git-basics.md  work-in-progress.md
include/aes/: aes_core.h  gcm.h
include/aes/core/: aes.h  aes_keyschedule.h  aes_operations.h
include/aes/maths/: gf.h
include/application/: compression.h  database.h  hospital.h  users.h
include/application/auth/: login.h  signup.h
include/application/users/: doctor.h  patient.h  patients.h  records.h  user.h
include/compression/: compression.h
include/compression/huffman/: codes.h  frequency_table.h  tree.h
include/encryption/: encryption.h
include/encryption/aes/: core.h  gcm.h  keyschedule.h  operations.h
include/portable64/: counter.h
include/user/: USER_CORE_H.c  USER_INPUT_H.c  core.c  core.h  input.c  input.h  user_interface.c  user_interface.h
include/utils/: bitops.h  compression.h  hash.h  hex.h  input.h  random.h  scanner.h  validation.h
lib/aes/: aes.c  aes_core.c  aes_keyschedule.c  aes_operations.c  gcm.c
lib/aes/core/: aes_keyschedule.c  aes_operations.c
lib/aes/maths/: gf.c
lib/application/: compression.c  database.c  hospital.c  records.c
lib/application/auth/: login.c  signup.c
lib/application/users/: doctor.c  patient.c
lib/compression/huffman/: frequency_table.c  huffman_codes.c  huffman_compress.c  huffman_decompress.c  tree.c
lib/encryption/aes/: core.c  gcm.c  keyschedule.c  operations.c
lib/encryption/aes/maths/: gf.c
lib/portable64/: counter.c
lib/user/: core.c  input.c
lib/utils/: bitops.c  compression.c  hash.c  hex.c  input.c  random.c  scanner.c  validation.c
tests/: test.c  test_compression.c  test_database.c  test_encryption.c  test_keiran.c  test_shared.h
tests/users/: test_patient.c
